non riesco a superare il sonno (da finire accrescimento gas e migrazione)

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -120,7 +120,7 @@ Attorno alle stelle giovani sovente si trovano strutture opache nel visibile ma 
 \caption{Frazione di stelle con disco protoplanetario in funzione dell'et\'a del cluster. Da \cite{mamajek2009initial}. }\label{fig:clusterage-fstar}
 \end{wrapfigure}
 
-In figura (\ref{fig:clusterage-fstar}) \'e riportata la sfrazione di stelle con dischi protoplanetari in funzione dell'et\'a del cluster. \'E possibile stimare tempo di vita caratteristico del disco considerando andamento esponenziale per frazione di dischi: secondo \cite{mamajek2009initial} $\tau_c\approx\SI{2.5}{\mega\year}$, mentre \cite{haisch2001disk} hanno determinato $\tau_c\approx\SI{6}{\mega\year}$.
+In figura (\ref{fig:clusterage-fstar}) \'e riportata la sfrazione di stelle con dischi protoplanetari in funzione dell'et\'a del cluster. \'E possibile stimare tempo di vita caratteristico del disco considerando andamento esponenziale per frazione di dischi: secondo (\cite{mamajek2009initial}) $\tau_c\approx\SI{2.5}{\mega\year}$, mentre (\cite{haisch2001disk}) hanno determinato $\tau_c\approx\SI{6}{\mega\year}$.
 
 \vspace{0.2\textheight}
 
@@ -592,12 +592,12 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 \chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
 }% e fase isolata
 
-\begin{wrapfigure}[13]{l}{0.5\textwidth}
+\begin{wrapfigure}[15]{l}{0.5\textwidth}
 \includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
-\caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}
+\caption{Massa planetaria in funzione della massa del core. Da \cite{alibert2005models}.}\label{fig:massenvvscore}
 \end{wrapfigure}
 
-Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz. In questa seconda fase l'accresscimento di massa \'e cos\'i rapido da esaurire il gas disponibile nella regione: l'accrescimento di gas \'e regolato da tempo scala viscoso del disco.
+Se il protopianeta raggiunge un valore critico di massa, dipendente debolmente da luminosit\'a generata da accrescimento dei pianetesimi e opacit\'a, per mantenere equilibrio idrostatico l'inviluppo gassoso del pianeta si contrae su tempi scala di Kelvin-Helmholtz. In questa seconda fase l'accresscimento di massa diviene cos\'i rapido da esaurire il gas disponibile nella regione: curva verticale di figura (\ref{fig:massenvvscore}). L'accrescimento di gas has come limite superiore il flusso di gas dovuto a evoluzione viscosa del disco.
 
 Da modelli numerici risulta
 \begin{equation}
@@ -609,7 +609,7 @@ con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
 
 \section{Accrescimento limitato da velocit\'a di raffreddamento}
 
-Seguendo \cite{} la struttura del pianeta \'e determinata integrando le equazioni di conservazione di massa, momento, energia e l'equazione del trasporto di energia:
+Seguendo (\cite{mordasini2012characterization}) la struttura del pianeta \'e determinata integrando le equazioni di conservazione di massa, momento e l'equazione del trasporto di energia:
 \begin{align}
 &\TDy{r}{m}=4\pi r^2\rho\\
 %&\TDy{r}{l}=0\\
@@ -734,7 +734,7 @@ fonti energia: tidal heating radiogeninc heat, star flux
 
 L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, per cui sembra improbabile una formazione in loco, e la presenza di sistemi multipli in risonanza sono indicatori di evoluzione orbitale, d'altra parte nel Sistema solare fenomeni di migrazione fornisco una spiegazione all'orbita di plutone, alla presenza di numerosi oggetti della fascia di Kuiper in risonanza $3:2$ con Nettuno e al periodo di collisioni intense testimoniato da craterizzazione (Late heavy bombardment).
 
-
+Fenomeni che possono dar luogo a migrazione planetaria:
 \begin{itemize}
 \item Interazione con disco proto-planetario. Elenco schematicamente alcuni risultati da \cite{armitage2007lecture} e \cite{crida2006planetary}.
 Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. La migrazione di tipo I ha tempi caratteristici
