--- a/seminario.bib
+++ b/seminario.bib
@@ -210,6 +210,16 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{mordasini2012characterization,
+  title={Characterization of exoplanets from their formation-I. Models of combined planet formation and evolution},
+  author={Mordasini, C and Alibert, Yann and Klahr, H and Henning, Th},
+  journal={Astronomy \& Astrophysics},
+  volume={547},
+  pages={A111},
+  year={2012},
+  publisher={EDP Sciences}
+}
+
 
 @article{hayashi1981structure,
   title={Structure of the solar nebula, growth and decay of magnetic fields and effects of magnetic and turbulent viscosities on the nebula},
