--- a/seminario.bib
+++ b/seminario.bib
@@ -345,6 +345,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{goldreich1980disk,
+  title={Disk-satellite interactions},
+  author={Goldreich, Peter and Tremaine, Scott},
+  journal={Astrophysical Journal},
+  volume={241},
+  number={1},
+  pages={425--441},
+  year={1980},
+  publisher={American Astronomical Society}
+}
+
 @article{goupil2008planet,
   title={Planet--Disk Interactions},
   author={Goupil, M-J and Zahn, J-P and Masset, FS},
