wrapfig kley pdres

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -734,12 +734,20 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Evoluzione orbite proto-pianeti: migrazione planetaria.}
 }
 
+\begin{wrapfigure}[10]{l}{0.5\textwidth}
+\includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{pdres}
+\caption{Perturbazioni della densit\'a di un disco protoplanetaria causata da due pianeti in risonanza $2:1$. Da \cite{kley2012planet}.}\label{fig:pdres}
+\end{wrapfigure}
+
 L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, per cui sembra improbabile una formazione in loco, e la presenza di sistemi multipli in risonanza sono indicatori di evoluzione orbitale, d'altra parte nel Sistema solare fenomeni di migrazione fornisco una spiegazione all'orbita di plutone, alla presenza di numerosi oggetti della fascia di Kuiper in risonanza $3:2$ con Nettuno e al periodo di collisioni intense testimoniato da craterizzazione (Late heavy bombardment).
 
 Fenomeni che possono dar luogo a migrazione planetaria:
 \begin{itemize}
-\item Interazione con disco proto-planetario. Elenco schematicamente alcuni risultati da \cite{armitage2007lecture} e \cite{crida2006planetary}.
-Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. La migrazione di tipo I ha tempi caratteristici
+\item Interazione con disco proto-planetario. Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. Velocit\'a edirezione della migrazione dipendono dalle caratteristiche del disco, massa del pianeta e moto relativo pianeta-gas.
+
+
+\begin{errata}[Elenco schematicamente alcuni risultati da \cite{armitage2007lecture} e \cite{crida2006planetary}]
+ La migrazione di tipo I ha tempi caratteristici
 \begin{equation}
 \tau_I\propto\frac{M_p}{\Gamma}\propto M_p\expy{-1}
 \end{equation}
@@ -750,6 +758,7 @@ La migrazione di tipo II \'e caratterizzata da formazione di un gap attorno all'
 \dot{a}_p=-\frac{3}{2}\frac{\nu}{r}
 \end{equation}
 Il momento esercitato sul pianeta dalla regione di corotazione pu\'o dar luogo a feedback positivo su pianeta di massa intermedia con velocit\'a radiale $\dot{a}_p$.
+\end{errata}
 
 \item Interazione con disco residuo di planetesimi
 
