limare ancora fino a condizioni iniziali: ho trascurato tempo accrescimento gas

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -735,11 +735,13 @@ fonti energia: tidal heating radiogeninc heat, star flux
 }
 
 \begin{wrapfigure}[10]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{pdres}
-\caption{Perturbazioni della densit\'a di un disco protoplanetaria causata da due pianeti in risonanza $2:1$. Da \cite{kley2012planet}.}\label{fig:pdres}
+\includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{pdres}
+\caption{Simulazione evoluzione orbite planetarie in disco di accrescimento fino a cattura in risonanza $2:1$: le regioni pi\'u dense sono in rosso. Da \cite{kley2012planet}.}\label{fig:pdres}
 \end{wrapfigure}
 
 L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, per cui sembra improbabile una formazione in loco, e la presenza di sistemi multipli in risonanza sono indicatori di evoluzione orbitale, d'altra parte nel Sistema solare fenomeni di migrazione fornisco una spiegazione all'orbita di plutone, alla presenza di numerosi oggetti della fascia di Kuiper in risonanza $3:2$ con Nettuno e al periodo di collisioni intense testimoniato da craterizzazione (Late heavy bombardment).
+
+\vspace{1.5cm}
 
 Fenomeni che possono dar luogo a migrazione planetaria:
 \begin{itemize}
