--- a/seminario.bib
+++ b/seminario.bib
@@ -188,6 +188,15 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{udry2000coralie,
+  title={The CORALIE survey for southern extra-solar planets. II. The short-period planetary companions to HD 75289 and HD 130322},
+  author={Udry, S and Mayor, M and Naef, D and Pepe, F and Queloz, D and Santos, NC and Burnet, M and Confino, B and Melo, C},
+  journal={Astronomy and Astrophysics},
+  volume={356},
+  pages={590--598},
+  year={2000}
+}
+
 @article{andrews2010protoplanetary,
   title={Protoplanetary disk structures in Ophiuchus. II. Extension to fainter sources},
   author={Andrews, Sean M and Wilner, DJ and Hughes, AM and Qi, Chunhua and Dullemond, CP},
@@ -197,6 +206,17 @@ pages={1282},
   pages={1241},
   year={2010},
   publisher={IOP Publishing}
+}
+
+@article{veras2004outward,
+  title={Outward migration of extrasolar planets to large orbital radii},
+  author={Veras, Dimitri and Armitage, Philip J},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={347},
+  number={2},
+  pages={613--624},
+  year={2004},
+  publisher={Blackwell Science Ltd Oxford, UK}
 }
 
 @article{mordasini2012characterization,
