--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,10 @@ L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polv
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
 }
 
+
+\begin{errata}[planetary system diversity]
 Il variare delle caratteristiche dei sistemi planetari osservati \'e determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii e di metallicit\'a, tempo di vita, condizioni del cluster di cui fa parte il disco.
+\end{errata}
 
 Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale di accrescimento di massa sulla stella centrale. In questo modo \'e possibile determinare in maniera statistica l'accuratezza delle ipotesi su cui si basano i modelli di formazione planetaria tramite confronto con la distribuzione delle propriet\'a dei pianeti osservati, tenuto conto dei bias osservativi.
 
