--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -150,8 +150,8 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \chapter{Caratteristiche della popolazione di esopianeti}
 }
 
-\begin{wrapfigure}[16]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.5\textwidth]{obsMa}
+\begin{wrapfigure}[10]{l}{0.65\textwidth}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.65\textwidth]{obsMa}
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}\label{fig:Maplot}
 \end{wrapfigure}
 
@@ -177,6 +177,8 @@ tab.1: occurrence and architecture exoplanetary system
 \item ...
 \end{itemize}
 \end{workout}
+
+\vspace{5cm}
 
 \section{Popolazione esopianeti rilevati tramite RV}
 
@@ -234,11 +236,10 @@ I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitat
 \end{subfigure}
 \end{figure}
 
-\begin{wrapfigure}[10]{l}{0.45\textwidth}
+\begin{figure}[!ht]
 \centering \includegraphics[trim={0cm 8cm 0 0},clip, width=0.43\textwidth]{PfreqvsFeH}
 \caption{Numero di pianeti in funzione della metallicit\'a stellare: nero dei giganti gassosi, rosso dei pianeti con $M\leq30\mearth{}$ e blu combinata. Da \cite{mayor2011harps}.}\label{fig:PfreqvsFeH}
-\end{wrapfigure}
-
+\end{figure}
 
 La distribuzione di massa (figure \subref{fig:freqvsM}, \subref{fig:freqvsMcomb}) mostra un'abbondante popolazione di pianeti di massa piccola e una rapida diminuzione attorno a $10\mearth{}$; la distribuzione dei periodi mostra aumento dei pianeti giganti ($M>30\mearth{}$) a maggiore periodo orbitale \subref{fig:freqvsPgiant} e concentrazione pianeti piccola massa a $P=10-100\si{\day}$ \subref{fig:freqvsPlowM}.
 
@@ -358,7 +359,12 @@ la relazione massa raggio \'e
 R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
 per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:probvsR-T}) nel picco attorno a $\rjupiter$.
-La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
+La figura (\subref{fig:RfreqPl100ub}) mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
+La distribuzione dei periodi \'e mostrata in figura (\subref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio. La frequenza dei pianeti in funzione del periodo segue andamento
+\begin{equation}
+\TDy{\log{P}}{f}=K_PP\expy{\beta}[1-\exp{-(\frac{P}{P_0})\expy{\gamma}}]
+\end{equation}
+Si ipotizza che il diverso valore del raggio critico $P_0$ (riportato in figura) sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
 \begin{equation}
