--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -159,6 +159,10 @@ Per determinare l'accrescimento di gas \'e necessario calcolare la struttura pla
 \end{align}
 dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
 
+\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
+$b=10.4+\log{f}$
+\end{workout}
+
 \begin{workout}[Higher mass gap formation reduces accretion rate]
 \begin{equation}
 f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
