--- a/seminario.bib
+++ b/seminario.bib
@@ -188,6 +188,18 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{kornet2004alternative,
+  title={An alternative look at the snowline in protoplanetary disks},
+  author={Kornet, Kacper and R{\'o}{\.z}yczka, M and Stepinski, Tomasz F},
+  journal={Astronomy \& Astrophysics},
+  volume={417},
+  number={1},
+  pages={151--158},
+  year={2004},
+  publisher={EDP Sciences}
+}
+
+
 @article{udry2000coralie,
   title={The CORALIE survey for southern extra-solar planets. II. The short-period planetary companions to HD 75289 and HD 130322},
   author={Udry, S and Mayor, M and Naef, D and Pepe, F and Queloz, D and Santos, NC and Burnet, M and Confino, B and Melo, C},
