--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -225,7 +225,7 @@ La probabilit\'a di rivelamento \'e determinata dall'ampiezza del moto radiale d
 mayor 11 fig 1
 \end{workout}
 
-I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitate regioni del diagramma periodo-massa ($P-M$)  ricavate da \cite{mayor2011harps} determinata utilizzando un sottocampione di stelle per cui la probabilit\'a di rivelazione relativa alla regione del diagramma $(P-M)$ \'e $99\%$: accanto alle linee continue nei diagrammi $(P,M)$ sono indkicate le percentuali di stelle per cui \'e possibile ottenere una probabilit\'a di rivelamento del $99\%$.
+I tre diagrammi (\ref{fig:PMfreqs}) mostrano la frequenza dei pianeti in delimitate regioni del diagramma periodo-massa ($P-M$)  ricavate da \cite{mayor2011harps} determinata utilizzando un sottocampione di stelle per cui la probabilit\'a di rivelazione relativa alla regione del diagramma $(P-M)$ \'e $99\%$: accanto alle linee continue nei diagrammi $(P,M)$ sono indkicate le percentuali di stelle per cui \'e possibile ottenere una probabilit\'a di rivelamento del $99\%$ nella parta inferiore del diagramma.
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0cm 5cm 0 0},clip, width=0.94\textwidth]{freqvsM}
@@ -241,7 +241,7 @@ I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitat
 \caption{Numero di pianeti in funzione della metallicit\'a stellare: nero dei giganti gassosi, rosso dei pianeti con $M\leq30\mearth{}$ e blu combinata. Da \cite{mayor2011harps}.}\label{fig:PfreqvsFeH}
 \end{figure}
 
-La distribuzione di massa (figure \subref{fig:freqvsM}, \subref{fig:freqvsMcomb}) mostra un'abbondante popolazione di pianeti di massa piccola e una rapida diminuzione attorno a $10\mearth{}$; la distribuzione dei periodi mostra aumento dei pianeti giganti ($M>30\mearth{}$) a maggiore periodo orbitale \subref{fig:freqvsPgiant} e concentrazione pianeti piccola massa a $P=10-100\si{\day}$ \subref{fig:freqvsPlowM}.
+La distribuzione di massa (figure \subref{fig:freqvsM}, \subref{fig:freqvsMcomb}) mostra un'abbondante popolazione di pianeti di massa piccola e una rapida diminuzione attorno a $10\mearth{}$; la distribuzione dei periodi mostra aumento dei pianeti giganti ($M>30\mearth{}$) a maggiore periodo orbitale (figura \subref{fig:freqvsPgiant}) e concentrazione pianeti piccola massa a $P=10-100\si{\day}$ (figura \subref{fig:freqvsPlowM}).
 
 La figura \ref{fig:PfreqvsFeH} mostra l'assenza di correlazione tra la metallicit\'a della stella e la frequenza di pianeti di piccola massa fino a $30-40\mearth{}$ al contrario di quello che accade per pianeti giganti.
 
@@ -319,10 +319,16 @@ Le osservabili sono la differenza di luminosit\'a durante il transito, la durata
 \end{equation}
 
 La probabilit\'a che l'orbita di un pianeta sia allineata con l'osservatore in maniera da avere un transito \'e:
-\begin{align*}
-&p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}(\frac{1}{1-e^2})
-\end{align*}
+\begin{equation}
+p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})
+\end{equation}
+dove $\pm$ indica inclusione/esclusione di transiti a raso.
 La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore probabilit\'a di rilevamento per la minor durata del transito.
+In forma adimensionale l'equazione precedente si riscrive:
+\begin{equation}
+p=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}(\frac{1}{1-e^2})
+\end{equation}
+
 Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica e $\delta=(\frac{R_p}{R_*})^2$. Per osservazione limitata da statistica fotoni $\sigma\propto\frac{1}{\sqrt{N_{ph}}}\propto d$: fissato S/N (e tipo stellare) il numero di pianeti rivelati varia come volume a cui \'e estesa la ricerca per probabilit\'a di transito:
 \begin{equation}
 V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
@@ -345,9 +351,9 @@ La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta 
 %&k_R=2.9_{-0.4}^{+0.5},\ \alpha=-1.92\pm0.11
 %\end{align*}
 
-\begin{wrapfigure}[21]{l}{0.61\textwidth}
+\begin{wrapfigure}[18]{l}{0.61\textwidth}
 \centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
-\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2500}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
+\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2000}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
 \end{wrapfigure}
 
 Nel caso un pianeta osservato tramite transito abbia massa nota \'e possibile determinarne la struttura interna tramite un modello planetario: La posizione di un pianeta nel diagramma massa-raggio \'e determinata dalla storia di accrescimento del pianeta (pianeta roccioso, pianeta costituito in parte da ghiacci, pianeta con massa consistente di gas), dal bilancio termico, e propriet\'a di H/He e metalli a alte densit\'a (rottura H molecolare, ionizzazione da pressione, degenerazione elettronica, transizioni di fase). La figura \ref{fig:MR-model-obs} mostra la relazione massa-raggio per pianeti nettuniani fino a regimi stellari. Considerando l'equazione di stato
