--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,6 @@
+\pdfminorversion=5 
+\pdfcompresslevel=9
+\pdfobjcompresslevel=2
 \documentclass[twoside,11pt,fleqn]{memoir}%%% seminario planetari PPS
 %openany
 
