accretion-disk-section deplaced after sistemi-solari-section

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
-\def\versione{consegna}%%VERSIONE
+\def\versione{bozza}%%VERSIONE
 \def\bozza{bozza}
 \def\consegna{consegna}
 %%%PENALITIES
@@ -131,7 +131,7 @@ Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il pr
 \cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
+\part{Formazione sistemi planetari: descrizione scenario core accretion}\label{part:CAdesc}
 }
 \begin{figure}[!ht]
 \includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
